reidentify by which method
returns the method from an exists? call so reidentify can be called
